--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,57 @@ html, body
   font-family: 'Open Sans', sans-serif;
   overflow: hidden;
 }
+
+.panel
+{
+  z-index: 2;
+  position: absolute;
+  padding: 10px;
+  background: #BBBBFF;
+  box-shadow: 0px 0px 5px gray;
+}
+
+.panel-left
+{
+  top: 20px;
+  left: 20px;
+}
+
+.panel h2,
+.panel h3,
+.panel h4,
+.panel h5,
+.panel h6
+{
+  margin: 0;
+}
+
+#tiles-container
+{
+  width: 240px;
+  height: 500px;
+}
+
+#tiles-container .tiles
+{
+  height: 440px;
+  overflow-y: scroll;
+  padding: 0;
+}
+
+#tiles-container .tiles li
+{
+  list-style-type: none;
+  display: inline-block;
+}
+
+#tiles-container .tiles li:nth-child(2n)
+{
+  padding-left: 5px;
+}
+
+#tiles-container .tiles li img
+{
+  width: 100px;
+}
+
