--- a/css/index.css
+++ b/css/index.css
@@ -46,22 +46,25 @@ html, body
   height: 440px;
   overflow-y: scroll;
   padding: 0;
+  padding-top: 5px;
 }
 
 #tiles-container .tiles li
 {
   list-style-type: none;
   display: inline-block;
-}
-
-#tiles-container .tiles li:nth-child(2n)
-{
   padding-left: 5px;
 }
 
 #tiles-container .tiles li img
 {
   width: 100px;
+}
+
+#tiles-container .tiles li img:hover
+{
+  cursor: pointer;
+  box-shadow: 0px 0px 10px #FFEA00;
 }
 
 #controls-container .controls button
