--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,11 @@ html, body
   box-shadow: 0px 0px 10px #FFEA00;
 }
 
+#tiles-container .tiles li.selected img
+{
+  box-shadow: 0px 0px 10px #00FF22;
+}
+
 #controls-container .controls button
 {
   width: 23%;
