--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,7 @@ html, body
 
 #tiles-container .tiles li
 {
+  cursor: pointer;
   list-style-type: none;
   display: inline-block;
   padding-left: 5px;
@@ -61,9 +62,8 @@ html, body
   width: 100px;
 }
 
-#tiles-container .tiles li img:hover
+#tiles-container .tiles li:not(.selected) img:hover
 {
-  cursor: pointer;
   box-shadow: 0px 0px 10px #FFEA00;
 }
 
