--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,13 @@ html, body
   margin: 0;
 }
 
+#loading
+{
+  display: none;
+  float: right;
+  margin: 2px;
+}
+
 #tiles-container
 {
   width: 240px;
