Made it so that panels become transparent while dragging and pointer events are disabled - fixes a critical bug

--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,12 @@ html, body
   cursor: none;
 }
 
+.dragging .panel
+{
+  opacity: 0.2;
+  pointer-events: none;
+}
+
 #tiles-container
 {
   width: 240px;
