--- a/css/index.scss
+++ b/css/index.scss
@@ -1,3 +1,7 @@
+---
+---
+$panel-background: #B8FFA1;
+
 html, body
 {
   margin: 0;
@@ -12,7 +16,7 @@ html, body
   position: absolute;
   top: 70px;
   padding: 10px;
-  background: #DAEEFF;
+  background: $panel-background;
   box-shadow: 0px 0px 5px gray;
 }
 
@@ -56,7 +60,7 @@ header
   box-sizing: border-box;
   padding: 8px;
   height: 50px;
-  background-color: #DAEEFF;
+  background-color: $panel-background;
   box-shadow: 0px 0px 5px gray;
 }
 
