Set button color so links are correct

--- a/css/index.scss
+++ b/css/index.scss
@@ -166,6 +166,7 @@ button .fa
 .button,
 button
 {
+  color: #444444;
   display: inline-block;
   text-transform: uppercase;
   background: darkgray;
