Changed default link color to black

--- a/css/index.scss
+++ b/css/index.scss
@@ -166,7 +166,7 @@ button .fa
 .button,
 button
 {
-  color: #444444;
+  color: black;
   display: inline-block;
   text-transform: uppercase;
   background: darkgray;
