Made tile selector scroll horizontally for ease

--- a/css/pathgenerator.css
+++ b/css/pathgenerator.css
@@ -3,3 +3,11 @@
   width: 40%;
   height: 180px;
 }
+
+#tiles-container .tiles
+{
+  overflow: hidden;
+  overflow-x: scroll;
+  white-space: nowrap;
+}
+
