--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,8 @@
 ---
 ---
 $panel-background: #2196f3;
+$panel-box-shadow: 0px 0px 5px gray;
+$border-radius: 2px;
 
 html, body
 {
@@ -33,7 +35,7 @@ html, body
   top: 70px;
   padding: 10px;
   background: $panel-background;
-  box-shadow: 0px 0px 5px gray;
+  box-shadow: $panel-box-shadow;
 }
 
 .panel-left
@@ -187,7 +189,7 @@ button
   text-transform: uppercase;
   background: #FFFFFF;
   border: 1px solid #E4E4E4;
-  border-radius: 2px;
+  border-radius: $border-radius;
   box-shadow: 1px 1px 1px gray;
   padding: 1px 6px;
   box-sizing: border-box;
@@ -267,7 +269,9 @@ button.btn-rainbow:not(:disabled):hover
 }
 
 .button:not(:disabled):active,
-button:not(:disabled):active
+button:not(:disabled):active,
+.button:not(:disabled).active,
+button:not(:disabled).active
 {
   border-color: transparent;
   box-shadow: 0 0 0;
@@ -286,5 +290,51 @@ button:disabled
 {
   height: 26px;
   font-size: 14px;
+}
+
+#filter-container
+{
+  z-index: 5;
+  position: absolute;
+  right: 10px;
+  text-align: right;
+
+  #tile-filters
+  {
+    display: none;
+    margin: 5px;
+    padding: 0;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: left;
+    border-top: 1px solid black;
+
+    label
+    {
+      cursor: pointer;
+      display: block;
+    }
+  }
+}
+
+#filter-container.open
+{
+  $background: white;
+
+  background: $background;
+  border: 1px solid white;
+  border-radius: $border-radius;
+  box-shadow: $panel-box-shadow;
+
+  #tiles-filter-toggle
+  {
+    background: $background;
+  }
+
+  #tile-filters
+  {
+    display: block;
+  }
 }
 
